--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -45,3 +45,9 @@ p {
 input[type="submit"], .btn input[type="reset"]{
   color:#FAFAFA;
 }
+
+.card .collection, .card-action{
+  font-size: 1rem;
+  font-weight: 600;
+  text-align: center;
+}
