--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -51,3 +51,7 @@ input[type="submit"], .btn input[type="reset"]{
   font-weight: 600;
   text-align: center;
 }
+
+.comment-result{
+  text-align: center;
+}
